# WorldsWorstCompression

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh  conanfile.txt
data/: gen_random_word_docs.py  gen_vocabulary.py
include/models/: autoencoder.hpp
src/: infer.cpp  main.cpp  train.cpp
src/models/autoencoder/: autoencoder.cpp
